@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 09-04-2006 changed: Added free memory logging to logfile and removed current date (time is still there)
  - 09-04-2006 updated: chinese (simple) langugae file (Thanks to hibaby)
  - 09-04-2006 updated: Hebrew language file (Thnx to vgs)
  - 09-04-2006 added: xml header with encoding to language files. Language files now support UTF-8
